fixing header alignment

--- a/css/main.css
+++ b/css/main.css
@@ -427,7 +427,7 @@ HEADER
 
 .nav-links {
     text-align: right;
-    width: 49%;
+    width: 45%;
     float: left;
 }
 
